# db/migrate/20250801132700_remove_legacy_observations_count_from_memory_entities.rb
@@ -1,0 +1,7 @@
+# frozen_string_literal: true
+
+class RemoveLegacyObservationsCountFromMemoryEntities < ActiveRecord::Migration[8.0]
+  def change
+    remove_column :memory_entities, :observations_count, :integer
+  end
+end
